src/customized-bootstrap-styles.css
.bg-light {
    --tw-bg-opacity: 1 !important;
    background-color: rgb(24 24 27 / var(--tw-bg-opacity)) !important;
}

.navbar-brand, .nav-link, .navbar-toggler, .navbar-toggler-icon {
    --tw-text-opacity: 1 !important;
    color: rgb(244 244 245 / var(--tw-text-opacity)) !important;
}

.navbar-brand {
    font-weight: bold;
}

.sh {
    box-shadow: 25px 0 15px black;
}

.tp {
    --tw-bg-opacity: 0 !important;
}

main {
    height: 100vh;
    overflow-y: auto;
    overflow-x: hidden;
    perspective: 10px;
}

.background-plax {
    transform: translateZ(-2px) scale(1.2);
    z-index: -1;
    position: relative;
}

